--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,3 +65,61 @@ body {
 option {
 	padding-top: 30px !important;
 }
+.sidepanel {
+	height: 100%;
+	width: 0;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	right: 0;
+	background-color: #eee;
+	overflow-x: hidden;
+	padding-top: 50px;
+	transition: 0.5s;
+ }
+ 
+ /* The sidepanel links */
+ .sidepanel a {
+	padding: 8px 8px 8px 32px;
+	text-decoration: none;
+	font-size: 15px;
+	color: #111;
+	display: block;
+	transition: 0.3s;
+ }
+ 
+ /* When you mouse over the navigation links, change their color */
+ .sidepanel a:hover {
+	background-color: #0080F6;
+	color: #fff;
+ }
+ 
+ /* Position and style the close button (top right corner) */
+ .sidepanel .closebtn {
+	position: absolute;
+	top: 0;
+	right: 25px;
+	font-size: 36px;
+	margin-left: 50px;
+	color: #bbb;
+ }
+ 
+a.closebtn:hover {
+	background-color: transparent;
+	color: #000;
+}
+ /* Style the button that is used to open the sidepanel */
+.openbtn {
+	font-size: 20px;
+	cursor: pointer;
+	background-color: #fff;
+	color: #aaa;
+	padding: 5px 15px;
+	border: solid #888 1px;
+	border-radius: 10px;
+}
+ 
+.openbtn:hover {
+	background-color: #eee;
+	color: #444;
+}
